2002-01-09  Juan Pablo Mendoza <jpablo@gnome.org>

	* games-clock.c: Fix the time calculation.

2001-12-30  Juan Pablo Mendoza <jpablo@gnome.org>

	* games-clock.c: Merge a changue from gnomines/clock.c.

2001-12-23  Mark McLoughlin  <mark@skynet.ie>

	* games-clock.[ch]: copied from iagno/clock.[ch]. Change 
	the format to be like the old GtkClock.
