@@ -1,3 +1,8 @@
+2002-03-07  Juan Pablo Mendoza <jpablo@gnome.org>
+
+	* games-clock.c: Apply patch from Tommi Komulainen,
+	  to display the correct numbers of minutes.
+
 2002-01-09  Juan Pablo Mendoza <jpablo@gnome.org>
 
 	* games-clock.c: Fix the time calculation.
